# swaymsg_workspace

./: .rustfmt.toml  Cargo.toml  README.md  THIRDPARTY.yml  bom.json  default.nix  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md
src/: .main.rs.swp  commands.rs  ipcadapter.rs  lib.rs  main.rs  workspace.rs  workspaces.rs
tests/: integration_test_container_operations.rs  integration_test_rofi_actions.rs  integration_test_workspace_operations.rs
tests/common/: mod.rs
